# HDRUK-CoMeTR

./: .buildinfo  .coverage  .gitignore  README.md  cometr.global_metrics.html  cometr.html  cometr.local_metrics.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js  setup.cfg
.doctrees/: cometr.doctree  cometr.global_metrics.doctree  cometr.local_metrics.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: docs.yml  tests.yml
_sources/: index.rst.txt
cometr/: Metric.py  __init__.py
cometr/docs/: cometr.rst  conf.py  index.rst  modules.rst
cometr/docs/_build/doctrees/: cometr.doctree  index.doctree  (+3 more)
cometr/global_metrics/: FSC.py  FSC_quoll.py  FSC_toupy.py  MAE.py  MSE.py  MSSIM_cpu.py  Metric.py  Metrics.py  PSNR.py  SSIM.py  SSIM_cpu.py  SSIM_gpu_cpu.py  __init__.py  time.py
cometr/local_metrics/: AE.py  SE.py  __init__.py
docs/: cometr.global_metrics.rst  cometr.local_metrics.rst  cometr.rst  conf.py  conf.py.save  index.rst
docs/_build/doctrees/: cometr.doctree  cometr.global_metrics.doctree  cometr.local_metrics.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  cometr.global_metrics.html  cometr.html  cometr.local_metrics.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/global_metrics/: MSE.py
tests/data/: createh5file.py  file1_200  file2_200  file4_100  mae_result.py  mae_test_result  output.txt  psnr_result.py  psnr_test_result
tests/global_metrics/: test_AE.py  test_MAE.py  test_MSE.py  test_Metric.py  test_PSNR.py  test_SE.py  test_SSIM.py
(+15 files in other folders)
