[metadata]
name = cometr
version = 0.0.1

description = Gallery of metrics to compare volumetric data
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/rosalindfranklininstitute/HDRUK-CoMeTR

project_urls =
    Source=https://github.com/rosalindfranklininstitute/HDRUK-CoMeTR
    Tracker=https://github.com/rosalindfranklininstitute/HDRUK-CoMeTR/issues

author = Dimitrios Bellos, Netochukwu Onyiaji, Dolapo Adebo

author_email = dimitrios.bellos@rfi.ac.uk

license = Apache 2.0

license_file = LICENSE

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: POSIX
    Topic :: Utilities
    Programming Language :: Python :: 3

platforms =
    linux

[options]
packages = find:
python_requires = ==3.*
install_requires=
    numpy
    h5py
    mrcfile
    pyyaml
    beartype
    psutil
    scipy
    scikit-learn
    torch==1.13.1+cu117
    torchvision==0.14.1+cu117
    torchmetrics==0.11.4
include_package_data = True

[options.extras_require]
test =
    pytest
    pytest-cov
    mock
build_docs =
    docutils
    sphinx_rtd_theme
    sphinx
    sphinxcontrib-napoleon
    sphinx-argparse
dev =
    %(test)s
    %(build_docs)s

[options.entry_points]
console_scripts=
    cometr.mse=cometr.global_metrics.MSE:main
    cometr.ssim=cometr.global_metrics.SSIM:main
    cometr.metrics=cometr.global_metrics.Metrics:main
    

[aliases]
test = pytest

[tool:pytest]
testpaths = tests
addopts = --cov=cometr --doctest-modules
